--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -99,8 +99,8 @@ es:
           legend: "Crear Link"
           type  : "Tipo"
           url   : "Valor"
-          title : "@@Link Title"
-          target: "@@Link Target"
+          title : "Texto del Enlace"
+          target: "Destino del Enlace"
           submit: "Crear Link"
           reset : "Cerrar"
           url_op: "URL"
@@ -400,7 +400,7 @@ es:
       auto_redirect: 'Si tienes un sitio web tradicional, <a target="ym-help" href="http://help.yomobi.com/Account/MobileRedirectScript"> entérate de cómo re-dirigir de manera automática a tus visitantes móviles desde tu sitio web tradicional hacia tu sitio móvil</a>.'
       easy_update_header: "Actualización de sitio con facilidad"
       easy_update: "Es muy fácil actualizar tu sitio móvil. Todos los cambios que realices son automáticamente publicados, de modo que tu sitio siempre se encuentre actualizado."
-      help_header: "¿Necesita ayuda?"
+      help_header: "¿Necesitas ayuda?"
       help: 'Para mayor información, <a target="ym-help" href="http://help.yomobi.com">favor de visitar nuestras páginas de ayuda.</a>'
       customize_header: "Comenzar Personalización"
       customize: "Para iniciar la personalización de tu sitio, favor de hacer click en el botón de abajo."
@@ -491,7 +491,7 @@ es:
       explanation: "<p>Editar opciones avanzadas.</p>"
       mobile_url: "URL del Sitio Móvil:"
       redirect_code: "Código de Re-dirección desde Sitio Tradicional:"
-      redirect_code_help: "Para redirigir visitantes hacia tu sitio móvil cuando accedan hacia tu sitio tradicional usando un teléfono móvil/celular, copia esta pieza de código para pegarlo en la página de inicio de tu sitioâ€™s tradicional, justo antes del símbolo de cierre de la etiqueta (tag)&lt;head&gt;. <b>Para más ayuda, Haz Click en ?.</b>"
+      redirect_code_help: "Para redirigir visitantes hacia tu sitio móvil cuando accedan hacia tu sitio tradicional usando un teléfono celular, copia esta pieza de código para pegarlo en la página de inicio de tu sitioâ€™s tradicional, justo antes del símbolo de cierre de la etiqueta (tag)&lt;head&gt;. <b>Para más ayuda, Haz Click en ?.</b>"
       keywords: "Ingresa las palabras clave que describen a tu sitio web, separadas por comas:"
       save: "Guardar Opciones Seleccionadas"
 
@@ -763,12 +763,12 @@ es:
     # site_manager
     help:
       site_access_list: 'Para administrar un sitio, selecciónalo de la lista siguiente, luego usa el panel de configuración de la derecha para editar o actualizar el sitio.<br/><br/><a href="http://help.yomobi.com/SiteManager" target="ymhelp">Para mayor información pulsa aquí.</a>'
-      signup_keys: 'Cuando estés listo para entregar este sitio a su propietario, genera una clave de registro, luego envía por email el enlace al propietario del sitio. Asegúrate que haga click en el enlace para que se registre ante Yomobi y tome posesión de su sitio.<br/><br/><a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp">Haz click aquí para mayor información.</a>'
+      signup_keys: '<b>Sólo el propietario del sitio puede generar una clave de registro.</b><br/><br/>Cuando estés listo para entregar este sitio a su propietario, genera una clave de registro, luego envía por email el enlace al propietario del sitio. Asegúrate que haga click en el enlace para que se registre ante Yomobi y tome posesión de su sitio.<br/><br/><a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp">Haz click aquí para mayor información.</a>'
       manage_site_type: 'Selecciona una opción de pago a continuación para mejorar el plan de tu sitio móvil a una cuenta a la Medida. Puedes cancelar tu suscripción en cualquier momento.<br/><br/><a href="http://help.yomobi.com/SiteManager/SiteTypes" target="ymhelp">Para mayor información acerca de la cuenta a la Medida y de cómo pagar, pulsa aquí.</a>'
       extend_premium_term: 'Selecciona una opción de pago para ampliar la vigencia de tu actual cuenta a la Medida. Puedes cancelar tu suscripción en cualquier momento.<br/><br/><a href="http://help.yomobi.com/SiteManager/SiteTypes" target="ymhelp">Para mayor información acerca de las funciones de la cuenta a la Medida y de sus formas de pago pulsa aquí.</a>'
       renew_subscription: 'Favor de renovar tu suscripción actual para que puedas mantener las funciones de modificación a la medida. Puedes cancelar tu suscripción en cualquier momento.'
       manage_custom_domain: '<a href="http://help.yomobi.com/SiteManager/CustomDomain" target="ymhelp">Para saber cómo relacionar un dominio a la medida con tu sitio móvil, pulsa aquí.</a>'
-      manage_site_admins: '<a href="http://help.yomobi.com/SiteManager/SiteAdmins" target="ymhelp">Para conocer cómo ajustar las cuentas de administradores para este sitio, pulsa aquí.</a>'
+      manage_site_admins: '<b>Sólo el propietario del sitio puede gestionar los administradores del sitio.</b><br/><br/><a href="http://help.yomobi.com/SiteManager/SiteAdmins" target="ymhelp">Para conocer cómo ajustar las cuentas de administradores para este sitio, pulsa aquí.</a>'
     confirm:
       concede_site: ¿Estás seguro(a)? Cederás / Perderás la propiedad de este sitio.
     dialog:
@@ -947,7 +947,7 @@ es:
       "Insert image": "Insertar Imagen"
       "Insert Ordered List": "Insertar lista numérica"
       "Insert table": "Insertar Tabla"
-      "Insert Unordered List": "Insertar Lista viñetas"
+      "Insert Unordered List": "Insertar lista con viñetas"
       "Italic": "Cursiva"
       "Justify Center": "Centrar"
       "Justify Full": "Justificar"
