--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -763,12 +763,12 @@ en:
     # site_manager
     help:
       site_access_list: 'To manage a site, select it in the list below, then use the configuration panel on the right to edit or update the site.<br/><br/><a href="http://help.yomobi.com/SiteManager" target="ymhelp">Click here for more information.</a>'
-      signup_keys: '<b>Only the site owner can generate a Signup Key.</b><br/><br/>When you are ready to hand this site over to an owner who does not already have a YoMobi login, generate a signup key, then email the link to the site owner and have them click on the link to sign up to Yomobi and take ownership of their site.<br/><br/><a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp">Click here for more information.</a>'
+      signup_keys: '<b>You must be the site owner to generate a Signup Key.</b><br/><br/>When you are ready to hand this site over to an owner who does not already have a YoMobi login, generate a signup key, then email the link to the site owner and have them click on the link to sign up to Yomobi and take ownership of their site.<br/><br/><a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp">Click here for more information.</a>'
       manage_site_type: 'Select a payment option below to upgrade your mobile site to a Custom account. You may cancel your subscription at any time.<br/><br/><a href="http://help.yomobi.com/SiteManager/SiteTypes" target="ymhelp">Click here for more information about Custom account features and making payments.</a>'
       extend_premium_term: 'Select a payment option below to extend the duration of your existing Custom account. You may cancel your subscription at any time.<br/><br/><a href="http://help.yomobi.com/SiteManager/SiteTypes" target="ymhelp">Click here for more information about Custom account features and making payments.</a>'
       renew_subscription: 'Please renew your current subscription to maintain access to custom features. You may cancel your subscription at any time.'
       manage_custom_domain: '<a href="http://help.yomobi.com/SiteManager/CustomDomain" target="ymhelp">Click here to learn how to associate a custom domain with your mobile site.</a>'
-      manage_site_admins: '<b>Only the site owner can manage site administrators.</b><br/><br/><a href="http://help.yomobi.com/SiteManager/SiteAdmins" target="ymhelp">Click here to learn how to manage site administrators.</a>'
+      manage_site_admins: '<b>You must be the site owner to manage site administrators.</b><br/><br/><a href="http://help.yomobi.com/SiteManager/SiteAdmins" target="ymhelp">Click here to learn how to manage site administrators.</a>'
     confirm:
       concede_site: Are you sure? You will lose ownership of this site.
     dialog:
