Added "Delete Site" link to Site Manager and "Cancel Account" link to Account manager with corresponding formatting and translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -419,6 +419,7 @@ en:
     current_password: "Current Password*:"
     contact_information: "Contact Information"
     update_contact_info: "Update Contact Information"
+    cancel_account: "Cancel Account"
     first_name: "First Name:"
     last_name: "Last Name:"
     email: "Email:"
@@ -700,6 +701,7 @@ en:
     site_details: "Site Details"
     select_site: "Please select a site on the left."
     selected_site: "Manage: %{site_name}"
+    delete_site: "Delete Site"
     edit_site: "Edit Site"
     generate: "Generate"
     signup_keys: "Signup Keys"
