--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -419,6 +419,7 @@ es-ES:
     current_password: "Contraseña Actual*:"
     contact_information: "Información de Contacto"
     update_contact_info: "Actualizar Información de Contacto"
+    cancel_account: "Cancelar Cuenta"   
     first_name: "Nombre:"
     last_name: "Apellido:"
     email: "Email:"
@@ -700,6 +701,7 @@ es-ES:
     site_details: "Detalles del Sitio"
     select_site: "Favor de seleccionar un sitio de la izquierda."
     selected_site: "Seleccionado: %{site_name}"
+    delete_site: "Eliminar Sitio"
     edit_site: "Editar Sitio"
     generate: "Generar"
     signup_keys: "Claves de Registro"
