Updated URLs to point to site manger in not_premium message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -505,7 +505,7 @@ en:
       banner_help: "<p>A banner will override all other header settings.</p>"
       body_bg: "Wallpaper"
       body_bg_help: "<p>Upload a background image.</p>"
-      not_premium: '<a href="http://help.yomobi.com/SiteManager/Upgrade" target="ymhelp">You must upgrade this site to Custom to use this feature. Click here to learn how to upgrade.</a>'
+      not_premium: '<a href="/site-manager">You must upgrade this site to Custom to use this feature. Click here to learn how to upgrade.</a>'
 
       customizing_header: "Customizing Header"
       header: "Header"
