--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -600,6 +600,7 @@ es:
       to_start: "Para Iniciar:"
       two_times_per_day_label: "Especificar dos horarios para cada día."
       url_label_required: "URL*:"
+      url_no_redirect_label: "No Redirigir"
       url_type_label_required: "Tu URL %{type}*:"
       zip_label: "Código Postal:"
 
@@ -874,6 +875,7 @@ es:
 
       link:
         help: <p>Agrega un enlace hacia una página web.</p>
+        noRedirect: "Seleccione esta opción si desea vincular a una página en su sitio completo."
 
       locations:
         help: <p>Ofrece a los visitantes de tu sitio móvil un fácil acceso al directorio de ubicaciones de tu negocio.</p><br><p>Usa esta función para crear un directorio de las ubicaciones de tu negocio.</p>
