--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,9 @@ en:
         password: "Password:"
         password_confirmation: "Password confirmation:"
 
+  text_msg:
+    unsubscribe: "To Unsubscribe:"
+
   homepage:
     welcome: "Welcome to YoMobi"
     message: 'Reach more people with a <span class="hilite">free</span> mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.<br/><br/> Being mobile is more important than ever.'
