Added "To Unsubscribe" translate to es.yml and es-ES.yml

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -40,7 +40,7 @@ es:
         password_confirmation: "Confirmación de contraseña:"
 
   text_msg:
-    unsubscribe: "@@To Unsubscribe:"
+    unsubscribe: "Para Cancelar:"
 
   homepage:
     welcome: "Bienvenido a YoMobi"
