Initial commit of icon layout feature. Added a string 'icon_layout' to CompanySettings that validates to either 'grid' or 'line', defaulting to 'line'. Currently you can switch between the line and grid view in the builder and see the results, saving not yet implemented.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -523,6 +523,11 @@ en:
       customizing_tab_bar_and_footer: "Customizing Tab Bar & Footer"
       icon_text_font: "Font"
       icon_text_color: "Text Color"
+      
+      icon_layout: "Style:"
+      icon_layout_grid: "Grid"
+      icon_layout_line: "Line"
+      icon_layout_height: "Height"
 
       home_page: "Home Page"
       customizing_home_page: "Customizing Home Page"
