Added line height, currently only appears in builder and might still be buggy as it's unfinished. Added icon_line_height integer to CompanySettings.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -527,7 +527,7 @@ en:
       icon_layout: "Style:"
       icon_layout_grid: "Grid"
       icon_layout_line: "Line"
-      icon_layout_height: "Height"
+      icon_line_height: "Height"
 
       home_page: "Home Page"
       customizing_home_page: "Customizing Home Page"
