--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,6 +42,12 @@ en:
   text_msg:
     unsubscribe: "To Unsubscribe:"
 
+  testdrive:
+    begin_btn: "Start Test Drive"
+    title: "Take a Test Drive"
+    header: "Try out all the features of YoMobi before you sign up."
+    explanation: "The test drive lets you try all of the functionality of the YoMobi platform before you sign up. When you click on the \"Start Test Drive\" button, we create a temporary account that you can use as a sandbox to see how the mobile site builder works. Once you've had a chance to try it out, you can sign up to create your own mobile site by clicking on the Sign Up link in the menu bar."
+
   homepage:
     welcome: "Welcome to YoMobi"
     message: 'Reach more people with a <span class="hilite">free</span> mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.<br/><br/> Being mobile is more important than ever.'
@@ -57,11 +63,7 @@ en:
     feature6: "Easily customizable content"
     feature7: "Subscriber notification"
 
-  test_drive:
-    begin_btn: "Start Test Drive"
-    title: "Take a Test Drive"
-    header: "Try out all the features of YoMobi before you sign up."
-    explanation: "The test drive lets you try all of the functionality of the YoMobi platform before you sign up. When you click on the \"Start Test Drive\" button, we create a temporary account that you can use as a sandbox to see how the mobile site builder works. Once you've had a chance to try it out, you can sign up to create your own mobile site by clicking on the Sign Up link in the menu bar."
+
 
   status:
     loading: "Loading..."
