Fixed label for Sign In button in en.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -214,7 +214,7 @@ en:
     email: "Email:"
     password: "Password:"
     remember_user: "Keep me logged in"
-    sign_in: "Member Sign In"
+    sign_in: "Sign In"
     or: "or"
     sign_up: "Sign Up for Yomobi"
     unlock_not_received: "Didn't receive unlock instructions?"
