Add i18n keys for display style option

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -530,6 +530,11 @@ en:
       header: "Header"
       header_font: "Font"
 
+      style: 'Style:'
+      icon: 'Icon'
+      line: 'Line'
+      height: 'Height'
+
       banner_size: "Banner Size"
       text_color: "Text Color"
       background_color: "Background Color"
