Add height options

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -533,7 +533,8 @@ en:
       style: 'Style:'
       icon: 'Icon'
       line: 'Line'
-      height: 'Height'
+      icon_height: 'Icon Height:'
+      font_size: 'Font Size:'
 
       banner_size: "Banner Size"
       text_color: "Text Color"
