Added fr to list of locales in application_controller.rb. Fixed missing quote in fr.countries.yml

--- a/config/locales/fr.countries.yml
+++ b/config/locales/fr.countries.yml
@@ -43,7 +43,7 @@ fr:
     CF: "République d'Afrique Centrale"
     CG: "Congo - Brazzaville"
     CH: "Suisse"
-    CI: "Côte d'Ivoire
+    CI: "Côte d'Ivoire"
     CK: "Îles de Cook"
     CL: "Chili"
     CM: "Cameroun"
