Committing the changes required for adding widget Text Area

--- a/config/locales/widgets/en.icons.yml
+++ b/config/locales/widgets/en.icons.yml
@@ -56,6 +56,7 @@ en:
       keep-me-informed: Keep Me Informed
       leave-a-message: Message
       booking-request: Booking Request
+      text-area: Text Area
       yomobi: Yomobi
       facebook: facebook
       twitter: twitter
