add_text_area: "TA"  ==> changed the label "Text Area"  to "TA" to avoid alignment issue. Later we need to fix this. added a style to implement "Text area" widget in other widgets $('#mobile-container').height('auto'); ==> Added to avoid customer reported issue No:4 (Emulator should resize properly when content is added or removed to the text area.)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -572,6 +572,7 @@ en:
     widget_editor:
       add_item: "Add %{item}"
       add_rss: "Add RSS"
+      add_text_area: "TA"
       address1_label_required: "Address 1*:"
       address1_label: "Address 1:"
       address2_label: "Address 2:"
@@ -608,6 +609,7 @@ en:
       rename_icon: "Rename"
       rename: "Rename"
       rss_icon: "Add RSS Feed"
+      text_area_icon : "Add Text Area"
       rss_label_required: "RSS Feed*:"
       rss_max_entries: "Max number of entries:"
       save: "Save Changes"
